--- a/src/app/patient-profile/add-disability/add-disability.component.html
+++ b/src/app/patient-profile/add-disability/add-disability.component.html
@@ -1,3 +1,41 @@
-<p>
-  add-disability works!
-</p>
+<form [formGroup]="disabilityForm" (ngSubmit)="onSubmit()">
+
+    <ion-item>
+        <ion-label position="stacked">Name</ion-label>
+        <ion-input name="name" type="text" formControlName="Name"></ion-input>
+        <div class="error" *ngIf="disabilityForm.controls.Name.errors && disabilityForm.controls.Name.touched">
+            Please fill out this field
+        </div>
+    </ion-item>
+    <ion-item lines="full">
+        <ion-label>Type</ion-label>
+        <ion-select value="Auditory" okText="Okay" cancelText="Dismiss" formControlName="Type">
+            <div class="error" *ngIf="disabilityForm.controls.Type.errors && disabilityForm.controls.Type.touched">
+                Please fill out this field
+            </div>
+            <ion-select-option value="1">Auditory</ion-select-option>
+            <ion-select-option value="2">Cognitive</ion-select-option>
+            <ion-select-option value="3">Physical</ion-select-option>
+            <ion-select-option value="4">Speech</ion-select-option>
+            <ion-select-option value="5">Visual</ion-select-option>
+
+
+        </ion-select>
+    </ion-item>
+    <ion-item lines="full">
+        <ion-label>Severity</ion-label>
+        <ion-select value="Severe" okText="Okay" cancelText="Dismiss" formControlName="Severity">
+            <div class="error" *ngIf="disabilityForm.controls.Severity.errors && disabilityForm.controls.Severity.touched">
+                Please fill out this field
+            </div>
+            <ion-select-option value="1">Severe</ion-select-option>
+            <ion-select-option value="2">Moderate</ion-select-option>
+            <ion-select-option value="3">Mild</ion-select-option>
+
+
+        </ion-select>
+    </ion-item>
+    <br>
+    <br>
+    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light">Done</ion-button>
+</form>
