--- a/src/app/patient-profile/add-disability/add-disability.component.html
+++ b/src/app/patient-profile/add-disability/add-disability.component.html
@@ -37,5 +37,5 @@
     </ion-item>
     <br>
     <br>
-    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light">Done</ion-button>
+    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [disabled]="!disabilityForm.valid">Done</ion-button>
 </form>
