--- a/src/app/patient-profile/patient-profile.page.html
+++ b/src/app/patient-profile/patient-profile.page.html
@@ -60,7 +60,7 @@
 
                     </ion-avatar>
 
-                    <ion-label> {{patientProfile['Id']}}</ion-label>
+                    <ion-label> {{patientProfile['Name']}}</ion-label>
 
 
                 </ion-item>
