--- a/src/app/patient-profile/add-access-mode/add-access-mode.component.html
+++ b/src/app/patient-profile/add-access-mode/add-access-mode.component.html
@@ -1,4 +1,12 @@
 <form [formGroup]="accessModeForm" (ngSubmit)="onSubmit()">
+    <ion-card-header [hidden]="disabilityOk" color="warning" class="animate__animated animate__slideInUp animate__fast"> To add access mode, you have to add disability first</ion-card-header>
+    <ion-item>
+        <ion-label position="stacked">Name</ion-label>
+        <ion-input name="name" type="text" formControlName="Description"></ion-input>
+        <div class="error" *ngIf="accessModeForm.controls.Name.errors && accessModeForm.controls.Name.touched">
+            Please fill out this field
+        </div>
+    </ion-item>
     <ion-item lines="full">
         <ion-label>Type</ion-label>
         <ion-select value="Auditory" okText="Okay" cancelText="Dismiss" formControlName="TypeAccessMode">
@@ -28,7 +36,7 @@
 
     <ion-item lines="full">
         <ion-label>Device Template</ion-label>
-        <ion-select value="" okText="Okay" cancelText="Dismiss" formControlName="DeviceTemplate_oid">
+        <ion-select multiple="true" value="" okText="Okay" cancelText="Dismiss" formControlName="DeviceTemplate_oid">
             <div class="error" *ngIf="accessModeForm.controls.DeviceTemplate_oid.errors && accessModeForm.controls.DeviceTemplate_oid.touched">
                 Please fill out this field
             </div>
@@ -43,5 +51,5 @@
 
     <br>
     <br>
-    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [disabled]="!accessModeForm.valid">Done</ion-button>
+    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [disabled]="!accessModeForm.valid || !disabilityOk">Done</ion-button>
 </form>
