--- a/src/app/patient-profile/component-access-mode/component-access-mode.component.html
+++ b/src/app/patient-profile/component-access-mode/component-access-mode.component.html
@@ -10,7 +10,7 @@
                 <ion-avatar slot="start">
                     <ion-icon color="tertiary" name="keypad-outline"></ion-icon>
                 </ion-avatar>
-                <ion-label>{{accessMode['Description']}}</ion-label>
+                <ion-label>{{accessMode['Name']}}</ion-label>
             </ion-item>
 
             <ion-item-options side="end" (ionSwipe)="deleteAccessMode(slidingItem, accessMode['Id'])">
