--- a/src/app/patient-profile/add-patient-profile/add-patient-profile.page.html
+++ b/src/app/patient-profile/add-patient-profile/add-patient-profile.page.html
@@ -40,7 +40,7 @@
         </ion-col>
 
     </ion-row>
-    <ion-segment value="all" color="tertiary" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+    <ion-segment value="all" color="tertiary" scrollable="true" mode="md" [(ngModel)]="segmentModel" lines="none">
         <ion-segment-button value="patientProfile">
             <ion-icon name="receipt-outline"></ion-icon>
             <ion-label text-wrap>Details</ion-label>
