--- a/src/app/patient-profile/add-access-mode/add-access-mode.component.scss
+++ b/src/app/patient-profile/add-access-mode/add-access-mode.component.scss
@@ -6,3 +6,14 @@
     margin-right: 100px;
     font-size: 14px;
 }
+
+ion-segment-button {
+    width: 30px;
+    margin-top: 2px;
+    margin-left: 4px;
+    margin-right: 4px;
+    font-size: 10px;
+    border: none;
+    background-color: rgb(248, 248, 248);
+    border-radius: 50%;
+}
