--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -4,7 +4,7 @@
         <!-- Slide 1 -->
         <ion-slide>
             <ion-text color="dark">
-                <h1>Welcome to IoTAFA</h1>
+                <h1>Welcome to MoSIoT</h1>
                 <img src="./assets/icon/favicon.png">
 
                 <ion-button (click)="next()" fill="outline" color="dark">Next</ion-button>
@@ -14,7 +14,7 @@
         <!-- Slide 2 -->
         <ion-slide>
             <ion-text color="dark">
-                <h1>IoTAFA</h1>
+                <h1>MoSIoT</h1>
                 <p>Easy life fo all!</p>
                 <img sizes="small" src="./assets/icon/favicon.png">
 
