--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
 
-    <ion-title color="light" style="font-size: 22px;">IoTAFA LOGIN</ion-title>
+    <ion-title color="light" style="font-size: 22px;">MoSIoT LOGIN</ion-title>
 
 
     <form>
