--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     <ion-menu menuId="main-menu" content-id="main">
         <ion-header>
             <ion-toolbar>
-                <ion-title>IoTAFA</ion-title>
+                <ion-title>MoSIoT
+                </ion-title>
             </ion-toolbar>
         </ion-header>
         <ion-content>
