--- a/src/app/patient-profile/detail-condition/detail-condition.page.html
+++ b/src/app/patient-profile/detail-condition/detail-condition.page.html
@@ -31,7 +31,7 @@
         </ion-col>
     </ion-row>
 
-    <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+    <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" lines="none">
         <ion-segment-button value="features">
             <ion-icon name="reader-outline"></ion-icon>
             <ion-label>Condition detail</ion-label>
