--- a/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.html
+++ b/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.html
@@ -43,7 +43,7 @@
         </ion-col>
 
     </ion-row>
-    <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+    <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" lines="none">
         <ion-segment-button value="details">
             <ion-icon name="receipt-outline"></ion-icon>
             <ion-label>Details</ion-label>
