--- a/src/app/tab0/tab0.page.html
+++ b/src/app/tab0/tab0.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button menu="main-menu"></ion-menu-button>
         </ion-buttons>
-        <ion-title text-center>IoTAFA</ion-title>
+        <ion-title text-center>MoSIoT</ion-title>
         <ion-icon slot="end" src="./assets/icon/logoIOT.svg"></ion-icon>
     </ion-toolbar>
 </ion-header>
