--- a/src/app/device-template/add-telemetry-component/add-telemetry-component.component.html
+++ b/src/app/device-template/add-telemetry-component/add-telemetry-component.component.html
@@ -1,9 +1,10 @@
+<ion-card-header [hidden]="!telemetryOk" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add especific telemetry </ion-card-header>
 <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" lines="none">
     <ion-segment-button value="telemetry">
         <ion-icon name="list-circle-outline"></ion-icon>
         <ion-label>Telemetry</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="specificTelemetry">
+    <ion-segment-button value="specificTelemetry" [disabled]="!telemetryOk">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Specific Telemetry</ion-label>
     </ion-segment-button>
@@ -11,6 +12,7 @@
 
 
 <div *ngIf="segmentModel === 'telemetry'">
+
     <form [formGroup]="telemetryForm" (ngSubmit)="onSubmit()">
         <ion-item>
             <ion-label position="stacked">Name</ion-label>
@@ -89,9 +91,17 @@
 
 
     <!-- Event form -->
-    <ion-card-header [hidden]="formNumber !== 2" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add evenet telemetry </ion-card-header>
+    <ion-card-header [hidden]="formNumber !== 2" color="light" class="animate__animated animate__slideInUp animate__fast"> Please add event telemetry for {{name}}</ion-card-header>
     <form [formGroup]="eventForm" *ngIf="formNumber == 2" (ngSubmit)="eventSubmit()">
 
+
+        <ion-item>
+            <ion-label position="stacked">Name</ion-label>
+            <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
+            <div class="error" *ngIf="eventForm.controls.Name.errors && eventForm.controls.Name.touched">
+                To add event telemetry please fill out this field
+            </div>
+        </ion-item>
         <ion-item>
             <ion-label>Severity</ion-label>
             <ion-select value="1" okText="Okay" cancelText="Dismiss" class="form-group" formControlName="Severity">
@@ -110,9 +120,15 @@
     </form>
 
     <!-- location form -->
-    <ion-card-header [hidden]="formNumber !== 3" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add location telemetry </ion-card-header>
+    <ion-card-header [hidden]="formNumber !== 3" color="light" class="animate__animated animate__slideInUp animate__fast"> Please add location telemetry for {{name}}</ion-card-header>
     <form [formGroup]="locationForm" *ngIf="formNumber == 3" (ngSubmit)="locationSubmit()">
-
+        <ion-item>
+            <ion-label position="stacked">Name</ion-label>
+            <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
+            <div class="error" *ngIf="locationForm.controls.Name.errors && locationForm.controls.Name.touched">
+                To add location telemetry please fill out this field
+            </div>
+        </ion-item>
         <ion-item>
             <ion-label>Latitude</ion-label>
             <ion-input type="number" formControlName="Latitude" class="form-control" id="latitude" name="Latitude"></ion-input>
@@ -143,9 +159,15 @@
         </ion-button>
     </form>
     <!-- Sensor form -->
-    <ion-card-header [hidden]="formNumber !== 4" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add sensor telemetry </ion-card-header>
+    <ion-card-header [hidden]="formNumber !== 4" color="light" class="animate__animated animate__slideInUp animate__fast"> Please add sensor telemetry for {{name}}</ion-card-header>
     <form [formGroup]="sensorForm" *ngIf="formNumber == 4" (ngSubmit)="sensorSubmit()">
-
+        <ion-item>
+            <ion-label position="stacked">Name</ion-label>
+            <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
+            <div class="error" *ngIf="sensorForm.controls.Name.errors && sensorForm.controls.Name.touched">
+                To add sensor telemetry please fill out this field
+            </div>
+        </ion-item>
         <ion-item>
             <ion-label position="stacked">Sensor type</ion-label>
             <ion-input type="text" formControlName="SensorType" class="form-control"></ion-input>
@@ -159,7 +181,7 @@
         </ion-button>
     </form>
     <!-- Range state form -->
-    <ion-card-header [hidden]="formNumber !== 1" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add state telemetry </ion-card-header>
+    <ion-card-header [hidden]="formNumber !== 1" color="light" class="animate__animated animate__slideInUp animate__fast"> Please add state telemetry for {{name}}</ion-card-header>
     <form [formGroup]="rangeStateForm" *ngIf="formNumber == 1" (ngSubmit)="rangeStateSubmit()">
 
         <ion-item>
@@ -188,7 +210,7 @@
 
 
 <!-- Fin the forms -->
-<div class="telemetries" line="">
+<!--<div class="telemetries" line="">
     <div class="telemetry" *ngFor="let telemetry of arrayTelemetries|keyvalue">
         <mat-expansion-panel details>
             <mat-expansion-panel-header>
@@ -203,13 +225,13 @@
 
             </mat-expansion-panel-header>
 
-            <!--   <ion-item-sliding>
+             <ion-item-sliding>
       <ion-item-options side="end">
           <ion-item-option color="danger" (click)="null" expandable>
               <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
           </ion-item-option>
       </ion-item-options>
-  </ion-item-sliding> -->
+  </ion-item-sliding> 
 
             <ion-card>
                 <ion-item>
@@ -233,11 +255,11 @@
 
 
             </ion-card>
-            <!-- <p>Content panel.</p> -->
+            <p>Content panel.</p> 
 
         </mat-expansion-panel>
 
 
 
-    </div>
 </div>
+</div>-->
