--- a/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.html
+++ b/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.html
@@ -46,7 +46,7 @@
             <ion-label>Details</ion-label>
         </ion-segment-button>
         <ion-segment-button value="careActivity">
-            <ion-icon name="medkit-outline"></ion-icon>
+            <ion-icon name="walk-outline"></ion-icon>
             <ion-label text-wrap>Care Activity</ion-label>
         </ion-segment-button>
         <ion-segment-button value="comunication">
@@ -64,62 +64,76 @@
 <ion-content>
 
     <div class="segment" *ngIf="segmentModel === 'details'">
-        <ion-list>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="document-outline"></ion-icon>Title</ion-list-header>
-            <ion-item>
 
-                <ion-label> {{carePlanTemplate['Title']}}</ion-label>
+        <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel2" lines="none">
+            <ion-segment-button value="profile">
+                <ion-icon name="medkit-outline"></ion-icon>
+                <ion-label>Profile</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="condition">
+                <ion-icon name="list-circle-outline"></ion-icon>
+                <ion-label text-wrap>Condition</ion-label>
+            </ion-segment-button>
 
-            </ion-item>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="clipboard-outline"></ion-icon>Description</ion-list-header>
-            <ion-item>
+        </ion-segment>
+        <div *ngIf="segmentModel2 === 'profile'">
+            <ion-list>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="document-outline"></ion-icon>Title</ion-list-header>
+                <ion-item>
 
-                <ion-label text-wrap> {{carePlanTemplate['Description']}}</ion-label>
+                    <ion-label> {{carePlanTemplate['Title']}}</ion-label>
 
-            </ion-item>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="bar-chart-outline"></ion-icon>Status</ion-list-header>
-            <ion-item>
+                </ion-item>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="clipboard-outline"></ion-icon>Description</ion-list-header>
+                <ion-item>
 
-                <ion-label *ngIf="carePlanTemplate['Status'] == 1"> Draft</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Status'] == 2"> Active</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Status'] == 3"> On Hold</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Status'] == 4"> Revoked</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Status'] == 5"> Completed</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Status'] == 6"> Canceled</ion-label>
+                    <ion-label text-wrap> {{carePlanTemplate['Description']}}</ion-label>
 
+                </ion-item>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="bar-chart-outline"></ion-icon>Status</ion-list-header>
+                <ion-item>
 
-
-            </ion-item>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="disc-outline"></ion-icon>Intent</ion-list-header>
-            <ion-item>
-                <ion-label *ngIf="carePlanTemplate['Intent'] == 1"> Proposal</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Intent'] == 2"> Plan</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Intent'] == 3"> Order</ion-label>
-                <ion-label *ngIf="carePlanTemplate['Intent'] == 4"> Option</ion-label>
-
-            </ion-item>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="calendar-outline"></ion-icon>Modified</ion-list-header>
-            <ion-item>
-
-                <ion-label> {{carePlanTemplate['Modified'] | date}}</ion-label>
-
-            </ion-item>
-            <ion-list-header>
-                <ion-icon class="segmentIcon" name="today-outline"></ion-icon>Duration days</ion-list-header>
-            <ion-item>
-
-                <ion-label> {{carePlanTemplate['DurationDays']}}</ion-label>
-
-            </ion-item>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 1"> Draft</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 2"> Active</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 3"> On Hold</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 4"> Revoked</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 5"> Completed</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Status'] == 6"> Canceled</ion-label>
 
 
 
-        </ion-list>
+                </ion-item>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="disc-outline"></ion-icon>Intent</ion-list-header>
+                <ion-item>
+                    <ion-label *ngIf="carePlanTemplate['Intent'] == 1"> Proposal</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Intent'] == 2"> Plan</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Intent'] == 3"> Order</ion-label>
+                    <ion-label *ngIf="carePlanTemplate['Intent'] == 4"> Option</ion-label>
+
+                </ion-item>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="calendar-outline"></ion-icon>Modified</ion-list-header>
+                <ion-item>
+
+                    <ion-label> {{carePlanTemplate['Modified'] | date}}</ion-label>
+
+                </ion-item>
+                <ion-list-header>
+                    <ion-icon class="segmentIcon" name="today-outline"></ion-icon>Duration days</ion-list-header>
+                <ion-item>
+
+                    <ion-label> {{carePlanTemplate['DurationDays']}}</ion-label>
+
+                </ion-item>
+
+
+
+            </ion-list>
+        </div>
     </div>
     <div *ngIf="segmentModel === 'careActivity'">
         <app-component-care-activity></app-component-care-activity>
