--- a/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.scss
+++ b/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.scss
@@ -75,10 +75,10 @@ app-component-telemetry {
 ion-segment-button {
     width: 40px;
     margin-top: 2px;
-    margin-left: 2px;
-    margin-right: 3px;
+    margin-left: 0px;
+    margin-right: 0px;
     font-size: 10px;
     border: none;
     background-color: rgb(248, 248, 248);
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
