--- a/src/app/device-template/add-telemetry-component/add-telemetry-component.component.scss
+++ b/src/app/device-template/add-telemetry-component/add-telemetry-component.component.scss
@@ -89,12 +89,12 @@ app-component-telemetry {
 }
 
 ion-segment-button {
-    width: 30px;
+    width: 40px;
     margin-top: 2px;
-    margin-left: 4px;
-    margin-right: 4px;
+    margin-left: 0px;
+    margin-right: 0px;
     font-size: 10px;
     border: none;
     background-color: rgb(248, 248, 248);
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
